Fix plot resizing in collapsed grids

--- a/src/nova/trame/view/theme/assets/core_style.scss
+++ b/src/nova/trame/view/theme/assets/core_style.scss
@@ -86,6 +86,8 @@ html {
 
 @media only screen and (max-width: 959px) {
     .d-grid {
+        /* This forces all grid rows to have the same height. If one doesn't want this to happen, then they should use the box layouts. :) */
+        grid-auto-rows: 1fr;
         grid-template-columns: repeat(1, 1fr) !important;
     }
 
